[package]
name = "linear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = "0.13.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = { version = "1.0.194", features = ["derive"] }
toml = "0.8.8"
